@@ -1,6 +1,11 @@
 2007-04-18  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/htdocs/lists/index.xml:
+	  Fix copy'n'paste mistake.
+
+2007-04-18  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/htdocs/lists/index.xml:
 	  Fix links to mailing list archives. Move unused lists to the bottom.
 
 2007-04-17  Thomas Vander Stichele  <thomas at apestaart dot org>
